Skip to content

Black screen when playing FMP4 encoded .avi

In 3.0.X on Windows 7 x64 VLC has problems playing a .avi with codec "Codec: MPEG-4 Video (FMP4)".

The problem occours since VLC 3.0.0 for Windows (32-BIT) as well as in the latest nightly.

It was tested on several computers from different manufacturers (HP/DELL/Fujitsu) with different graphic cards from Nvidia.

For logs, please visit the forum post about this bug: https://forum.videolan.org/viewtopic.php?f=14&t=143355&p=470366#p470366

To reproduce the problem, please download the demofile from https://cdn.fgmartens.org/videofiles/MY_File_final.avi and try to play it with VLC. The video starts playing, but the picture stays black. When converting the video with VLC to .mp4, the video plays like it should. With older versions of VLC, this problem doesn't exist.

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information