avcodec: fix black screen with hdtv-fixed videos

In case of indirect rendering.

This fixes a regression from dfb767189073493336df0cf43f7d0b6bf51f63e3

Fixes #20175